# markify

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: continiousDeployment.yml  continuousIntegration.yml
app/: main.py
app/api/: api.py
app/models/: schemas.py
app/schemas/: scraper_schemas.py
app/services/: crawl4ai_service.py  documentation_scraper.py  scraper_service.py  task_store.py
app/utils/: url_utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.feed.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: scraper.ts
frontend/src/components/: ResultView.tsx  UrlInput.tsx
frontend/src/hooks/: useScraper.ts
frontend/src/types/: types.ts
scripts/: script.py
src/api/: scraper.ts
src/components/: ProgressIndicator.tsx  ResultView.tsx
src/server/: index.ts  main.py
src/server/api/: routes.ts
src/server/config/: constants.ts
src/server/controllers/: scraper.controller.ts
src/server/middleware/: errorHandler.ts  validateUrl.ts
src/server/routes/: api.routes.ts
src/server/services/: documentationScraper.ts  htmlProcessor.ts  html_processor.py  scraperManager.ts
src/server/types/: types.ts
src/server/utils/: urlUtils.ts
