[tool.poetry]
name = "app"
version = "0.1.0"
description = "Doc Scrapper To Md API"
authors = ["Steve <steve.magne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unicorn = "^2.1.1"
pydantic = "^2.10.3"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
httpx = "^0.28.1"
python-multipart = "^0.0.19"
aiohttp = "^3.11.10"
uvicorn = "^0.32.1"
cmake = "^4.0.0"
requests = "^2.32.4"
fastapi = "^0.115.12"
zipfile36 = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Règle: formatage cohérent
line-length = 92
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.lint]
# Règle: normes de codage
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I001", # isort
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "E501",  # line too long (handled by black)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
]
fixable = ["ALL"]
unfixable = ["E712"]

[tool.ruff.lint.pydocstyle]
# Règle: style de documentation
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]
"__init__.py" = ["F401"]

[tool.ruff.format]
# Règle: style de formatage
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true